--- a/android internship task 2/app/src/main/res/layout/activity_main2.xml
+++ b/android internship task 2/app/src/main/res/layout/activity_main2.xml
@@ -6,107 +6,112 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity2">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_gravity="center"
-            android:layout_marginTop="80dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:srcCompat="@drawable/ic_symbol" />
-
-        <TextView
-            android:id="@+id/textView1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Welcome back!"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:textSize="30dp"
-            android:layout_marginTop="15dp"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Login to your account"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:textSize="15dp"
-            />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName1"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_outline_account_circle_24"
-            android:drawablePadding="10dp"
-            android:elevation="10dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:paddingLeft="10dp"
-            android:text="Username" />
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="80dp"
+                app:srcCompat="@drawable/ic_symbol" />
 
-        <EditText
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="Welcome back!"
+                android:textAlignment="center"
+                android:textSize="30dp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Login to your account"
+                android:textAlignment="center"
+                android:textSize="15dp" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName1"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/custom_input"
+                android:drawableStart="@drawable/ic_outline_account_circle_24"
+                android:drawablePadding="10dp"
+                android:elevation="10dp"
+                android:ems="10"
+                android:hint="Username"
+                android:inputType="textPersonName"
+                android:paddingLeft="10dp" />
+
+            <EditText
                 android:id="@+id/editTextTextPersonName"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/custom_input"
-                android:elevation="10dp"
                 android:drawableStart="@drawable/ic_outline_lock_24"
                 android:drawablePadding="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
+                android:elevation="10dp"
                 android:ems="10"
+                android:hint="Password"
                 android:inputType="textPersonName"
-                android:paddingLeft="10dp"
-                android:text="Password" />
+                android:paddingLeft="10dp" />
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/custom_button"
-            android:elevation="15dp"
-            android:textSize="15dp"
-            android:text="Sign in"
-            android:textAllCaps="false" />
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/custom_button"
+                android:elevation="15dp"
+                android:text="Sign in"
+                android:textAllCaps="false"
+                android:textSize="15dp" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:text="Dont't have account ?" />
-
-            <TextView
-                android:id="@+id/textView3"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/primary_blue"
-                android:layout_weight="1"
-                android:textSize="15dp"
-                android:text="  Sign up" />
-        </LinearLayout>
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Dont't have account ?"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="  Sign up"
+                    android:textColor="@color/primary_blue"
+                    android:textSize="15dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
