--- a/android internship task 2/app/src/main/res/layout/activity_main3.xml
+++ b/android internship task 2/app/src/main/res/layout/activity_main3.xml
@@ -54,7 +54,7 @@
             android:layout_gravity="center"
             android:inputType="textPersonName"
             android:paddingLeft="10dp"
-            android:text="Username"
+            android:hint="Username"
             />
 
         <EditText
@@ -71,7 +71,7 @@
             android:layout_gravity="center"
             android:inputType="textPersonName"
             android:paddingLeft="10dp"
-            android:text="Email"
+            android:hint="Email"
             />
 
         <EditText
@@ -87,7 +87,7 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:paddingLeft="10dp"
-            android:text="Password" />
+            android:hint="Password" />
 
         <Button
             android:id="@+id/button1"
