--- a/android internship task 2/app/src/main/res/layout/activity_main3.xml
+++ b/android internship task 2/app/src/main/res/layout/activity_main3.xml
@@ -126,6 +126,11 @@
                 android:text="  Log in" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
