--- a/android internship task 2/app/src/main/res/drawable/social_part.xml
+++ b/android internship task 2/app/src/main/res/drawable/social_part.xml
@@ -2,10 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_enabled="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/primary_blue" />
+        <shape android:shape="oval">
+            <solid android:color="@color/white"></solid>
             <corners android:radius="50dp" />
-
         </shape>
     </item>
 
