--- a/android internship task 2/app/src/main/res/layout/activity_main2.xml
+++ b/android internship task 2/app/src/main/res/layout/activity_main2.xml
@@ -8,7 +8,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="94dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,6 +112,7 @@
                     android:textColor="@color/primary_blue"
                     android:textSize="15dp" />
             </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
